<resources>
    <string name="app_name">AvazDemoDeveloperProject</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="what_do_you_like_to_eat">What do you like to eat</string>
    <string name="or">or</string>
    <string name="add_your_own">Add your own</string>
    <string name="new_str">New</string>
    <string name="continue_str">Continue</string>

    <!--  Default Dishes  -->
    <string name="apple">Apple</string>
    <string name="burger">Burger</string>
    <string name="cake">Cake</string>
    <string name="dimsum">Dimsum</string>
    <string name="dosa">Dosa</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="pancake">Pancake</string>
    <string name="pizza">Pizza</string>
    <string name="soup">Soup</string>
    <string name="sushi">Sushi</string>
    <string name="save">Save</string>
    <string name="bottom_sheet_label">What do you want to add</string>
    <string name="error_length">"Min of 3 words and max of 5 words "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thank_you">Thank you for signing up</string>
    <string name="user_likes_to_eat">User likes to eat</string>

</resources>